@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 7d3bced73dd12cc24a14d11258178baf30585135 ChangeLog
+SHA1 d99990415553bfcb2fbfe0d7246ee32c4ef8eb4a ChangeLog
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 2405b691fcb18b468ccb31cab97babb75e4d1f30 MANIFEST
-SHA1 3bb80b22247e8665c610a087270758a73965149d META.yml
-SHA1 f1b93f3d8341af833bcfd6f5bc47bfb1a95036e1 Makefile.PL
+SHA1 40402deb763ec720f2f080ffeb770c12eb64b7dd META.yml
+SHA1 b8f0f85ca85494a3827f989ddacbae6878b06a93 Makefile.PL
 SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 aa152c829fcf86957fd2012f6c30e5e18d3c76b2 bin/fullauto.pl
@@ -47,7 +47,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 d5b94ec921857af24bcad1bf2338573088237c20 lib/Net/FullAuto.pm
+SHA1 36f294d55408695bc852deadba1051d9fdad3d83 lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 5b1702f20efb104e3375934cf55a7438c19e109a lib/Net/FullAuto/Distro/fa_code.pm
@@ -58,17 +58,17 @@ SHA1 fe312c3ed58aac44bd3bebb39bef97df2c70ecad lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 1e9cdb0a94c0e832ac6240d6ae26fcab0cfebbc0 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 c6096414c9970ce64beb619cc9f0d78fe4d69993 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 b4baf1c186138b4787d366669cce665ca0838ffc lib/Net/FullAuto/FA_Core.pm
+SHA1 477db0d49b965bfd7247faf46db6ec12b43cd6df lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTwW7xAAoJEBa/9Pad787EvjQIAMnm8ag3qhK534Qox9saV5ft
-Sj69wja+hP4C+Ec8BoDXP7q59ioY0b1XpaLKT7m4trh1SyB3uXafKlna6VDmNF8c
-djX/nBy7tKcKZ1TfeGrDO4r5jdK9oAwzMQqqPxaR/VFIgXbFi31jNO94avjj7ztk
-zs7rs8bbbCjigAVACY741V/RnqiEcyO6Ws1ewMmdifo/1PRi1OJGE34B/WLKN2c4
-ALB3NPgMSChbeSORIuJy0Z2jS79Tzu4dJ9B18WUxmw5kAM/2AU/rYCQ5wDumYYjJ
-VnWQFUL8X3dr19I5o4bGSD8siq7a/R23arZCtblRt3OvTruMzrdWdJD48CACIa0=
-=Obpt
+iQEcBAEBAgAGBQJTwX8xAAoJEBa/9Pad787E3RgIAJtcC6hrjoU6hTEP761u1Brn
+IJ83lmXEU9Ycc4ut6mo0iRrsDLeznERHgWMe9OzwZ4vWQRQAPnpfKGIrgFY68JU8
+/KurCM9yDYbwIfhs0RXShABYdiN8dh99OWmgOgyFqnmjZBMtdWGdO9nRy1Vm8LGH
+s9F4QC1uttTVwn+rL6KQ97Cu1i1ugtdJ+wJSfpDPxs5j3tMSwmuSZn4BuAJ+qHQc
+es7HtNnZ49oUPe/8n5URWUKn7rQ08K4Vp2nUspt3+YRYSCIoAmjcku3mwmaS/AyJ
+7qtlF28P1LkQWD2sVzVmay67OPHn51GUCJC5CoqSNyWZu2/POFRBELOTd13h2uU=
+=FOFP
 -----END PGP SIGNATURE-----
