@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.9999999943';
+our $VERSION='0.9999999945';
 
 
 use 5.005;
