@@ -22,6 +22,15 @@
 
 2014-07-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
+        * Version 0.9999999945 released.
+
+        * Released last version without new FA_Core.pm :-( .
+
+        * New version of Term::Menus paired with this release.
+
+
+2014-07-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
         * Version 0.9999999944 released.
 
         * Figlet font viewer added.
